# github-watcher

./: .env.example  .gitignore  .hadolint.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  secret-scan.yml
backend/: pyproject.toml
backend/commit_watcher/: __init__.py  cli.py  clock.py  db.py  mcp_server.py  metrics.py  poller.py  repository.py  services.py  settings.py
backend/commit_watcher/api/: app.py
backend/commit_watcher/api/routers/: channels.py  config.py  watches.py
backend/commit_watcher/core/: config_io.py  filters.py  github.py  models.py  render.py  schemas.py
backend/github_watcher/: __init__.py  cli.py  clock.py  db.py  mcp_server.py  metrics.py  poller.py  repository.py  services.py  settings.py
backend/github_watcher/api/: app.py
backend/github_watcher/api/routers/: channels.py  config.py  matches.py  watches.py
backend/github_watcher/core/: config_io.py  filters.py  github.py  models.py  notify.py  render.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_config_io.py  test_filters.py  test_github.py  test_issues.py  test_services.py
docs/: ARCHITECTURE.md  STORY.md
docs/decisions/: 0001-poll-not-webhooks.md  0002-etag-conditional-requests.md  0003-shared-service-layer.md  0004-sqlite-source-of-truth.md  0005-apprise-notifications.md  0006-commits-and-issues-structured-filtering.md  0007-mcp-agent-access.md  0008-supply-chain-ci.md  _template.md  index.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ui.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Channels.tsx  History.tsx  StatusPage.tsx  Watches.tsx
