[project]
name = "github-watcher"
version = "0.1.0"
description = "Poll any GitHub repo's commits, filter by message/author/files/diff, and notify via ntfy, Discord, and 100+ Apprise channels. Web UI + REST API + CLI + MCP server."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ian Coutinho" }]
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    "sqlmodel>=0.0.39",
    "httpx>=0.28.1",
    "apprise>=1.12.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
    "prometheus-client>=0.25.0",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
    "pyright>=1.1.411",
    "pip-audit>=2.10.1",
]

[project.scripts]
github-watcher = "github_watcher.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["github_watcher"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer/FastAPI use function calls (Option/Body/Depends) as arg defaults by design.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["github_watcher"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.11"
# SQLModel types model columns as their Python type, so ORM expressions
# (Model.col.desc(), int|None PKs passed to int params) trip these without
# being real bugs. Use col() where it helps; relax the rest to keep signal.
reportArgumentType = false
reportAttributeAccessIssue = false
